# TitanCompute

./: .gitignore  QUICKSTART.md  README.md  docker-compose.yml
agent/: Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  requirements.txt
agent/src/: agent_server.py  config.py  jwt_validator.py  model_manager.py  quantization.py  stats_collector.py
agent/src/proto/: titancompute_pb2.py  titancompute_pb2_grpc.py
client/: README.md  rest_client.py  test_curl.sh  test_suite.py
coordinator/: Dockerfile  README.md  go.mod  go.sum
coordinator/cmd/: main.go
coordinator/pkg/config/: config.go
coordinator/pkg/proto/: titancompute.pb.go  titancompute_grpc.pb.go
coordinator/pkg/registry/: registry.go
coordinator/pkg/scheduler/: scheduler.go
coordinator/pkg/server/: rest_handlers.go  server.go
deploy/: bootstrap.sh  docker-compose.yml
docs/: CLEANUP_REPORT.md  JWT_IMPLEMENTATION.md  M2_IMPLEMENTATION_SUMMARY.md
proto/: README.md  generate.sh  titancompute.proto
scripts/: README.md  deploy.sh  validate.sh
