[project]
name = "agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncio-mqtt==0.16.1",
    "fastapi>=0.119.1",
    "grpcio==1.75.1",
    "grpcio-tools==1.75.1",
    "httpx==0.28.1",
    "nvidia-ml-py==13.580.82",
    "protobuf==6.32.1",
    "psutil==7.0.0",
    "pyjwt[crypto]==2.10.1",
    "uvicorn>=0.38.0",
]
